[package]
name = "aw-watcher-win-vdesktop"
version = "0.1.0"
edition = "2024"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }
chrono = "^0.4"
hostname = "^0.4"
winvd = "0.0.48"